# respirator-qt-for-mcu

./: BottomArea.qml  CMakeLists.txt  LeftArea.qml  ModesWidget.qml  README.md  RightArea.qml
qml/: CenterArea.qml  Respirator.qml
